--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.6",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
-    "react": "^19.0.0",
+    "ifevents-frontend": "file:",
+    "lucide-react": "^0.479.0",
+    "react": "19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
