--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
     "ifevents-frontend": "file:",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
